--- a/desafio1.html
+++ b/desafio1.html
@@ -31,7 +31,7 @@
     <main>
         <h2>Desafio 1:</h2>
         <p>Programas com alguns toques personalizados tornam a experiência na sua aplicação mais rica e dinâmica.</p>
-        <p>Por isso desenvolva uma aplicação que peça para o usuário responder 3 perguntas </p>
+        <p>Por isso desenvolva uma aplicação que peça para o usuário responder 3 perguntas: </p>
         <ul>
             <li>Qual o seu nome?</li>
             <li>Quantos anos você tem?</li>
