--- a/desafio3.html
+++ b/desafio3.html
@@ -30,7 +30,8 @@
     
     <main>
         <h2>Desafio 3:</h2>
-        <p>Você já brincou de tentar adivinhar o número que seu amigo ou amiga estava pensando? O desafio foi voltar na infância e fazer exatamente isso. Mas agora, o jogo vai ser contra o próprio computador!</p>
+        <p>Você já brincou de tentar adivinhar o número que seu amigo ou amiga estava pensando?</p>
+        <p>O desafio foi relembrar a infância e fazer exatamente isso. Mas agora, o jogo vai ser contra o próprio computador!</p>
        
         <p>Clique no botão abaixo e entre no jogo!</p>
 
