--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
     
     <main>
         <p>Nessa página está as minhas resoluções dos desafios de Lógica de Programação propostos pela Rafaella Ballerini nos <i>7 Days Of Code</i> da Alura.</p>
+        <p>Clique nos links abaixo para testar as aplicações:</p>
+        <section >
+            <div class="btnHome" id="d1"><a href="./desafio1.html">Desafio 1</a></div>
+            <div class="btnHome" id="d2"><a href="./desafio2.html">Desafio 2</a></div>
+            <div class="btnHome" id="d3"><a href="./desafio3.html">Desafio 3</a></div>
+            <div class="btnHome" id="d4"><a href="./desafio4.html">Desafio 4</a></div>
+            <div class="btnHome" id="d5"><a href="./desafio5.html">Desafio 5</a></div>
+        </section>
+
     </main>
 
     <footer>
