--- a/desafio2.html
+++ b/desafio2.html
@@ -32,9 +32,10 @@
         <h2>Desafio 2:</h2>
         <p>O segundo desafio foi criar os destinos possíveis de um jogo, em que o usuário consiga escolher:</p>
         <ul>
-            <li>Se quer seguir para área de Front-End ou seguir para a área de Back-End.</li>
-            <li> Caso esteja na área de Front-End, se quer aprender React ou aprender Vue. Caso esteja na área de Back-End, poderá aprender C# ou aprender Java.</li>
-            <li> Depois, independente das escolhas anteriores, o usuário poderá escolher entre seguir se especializando na área escolhida ou seguir se desenvolvendo para se tornar Fullstack. </li>
+            <li>Se quer seguir para área de Front-End ou Back-End.</li>
+            <li> Caso esteja na área de Front-End, se quer aprender React ou aprender Vue.</li>
+            <li>Caso esteja na área de Back-End, poderá aprender C# ou aprender Java.</li>
+            <li> Depois, o usuário poderá escolher entre seguir se especializando na área escolhida ou seguir se desenvolvendo para se tornar Fullstack. </li>
             <li>Por fim, pergunte quais são as tecnologias nas quais a pessoa gostaria de se especializar ou de conhecer.</li>
         </ul>
 
