--- a/desafio5.html
+++ b/desafio5.html
@@ -38,31 +38,30 @@
         <input id="desafio5" class="botton" type="button" value="Resolução desafio 5">
 
         <section id="calculadora">
-            <p>Como complemento ao desafio, também fiz a calculadora completa, como está abaixo:</p>
+            <p>Como complemento ao desafio, também fiz a calculadora completa:</p>
 
             <div class="calculator">
                 <div class="display" id="display">123,12</div>
                 <div class="calculator-buttons">
-                    <button id="limparDisplay">CE</button>
                     <button id="limparCalculo">C</button>
                     <button id="backspace">«</button>
                     <button id="operadorDividir">/</button>
+                    <button id="operadorMultiplicar">*</button>
                     <button id="tecla7">7</button>
                     <button id="tecla8">8</button>
                     <button id="tecla9">9</button>
-                    <button id="operadorMultiplicar">*</button>
+                    <button id="operadorSubtrair">-</button>
                     <button id="tecla4">4</button>
                     <button id="tecla5">5</button>
                     <button id="tecla6">6</button>
-                    <button id="operadorSubtrair">-</button>
+                    <button id="operadorAdicionar">+</button>
                     <button id="tecla1">1</button>
                     <button id="tecla2">2</button>
                     <button id="tecla3">3</button>
-                    <button id="operadorAdicionar">+</button>
-                    <button id="inverter">±</button>
+                    <button id="igual">=</button>
                     <button id="tecla0">0</button>
                     <button id="decimal">,</button>
-                    <button id="igual">=</button>
+
                 </div>
             </div>
 
