desafio 4 lista de compras

--- a/desafio4.html
+++ b/desafio4.html
@@ -35,6 +35,8 @@
         <p>Clique no botão abaixo e veja a resolução do desafio: </p>
 
         <input id="desafio4" class="botton" type="button" value="Resolução desafio 4">
+
+        <div id="listaCompras"> </div>
     </main>
 
     <footer>
